CHANGES IN VERSION 2.12 (from 2.1):

Command-line options:
- -X for XHTML mode
- --help displays command-line option summary
- --version displays version information
- "long options" -nostdinc, -nocurinc, etc. changed to --nostdinc,
  --nocurinc, etc.

Documentation:
- fixed miscellaneous typographical, grammatical, and spelling mistakes

Miscellaneous internal issues:
- problematic (though not technically incorrect) C code fixed: casts to
  malloc()-like functions removed, sizeof(type) changed to sizeof(*var)
  where appropriate, replaced null argument lists with (void) where
  appropriate, added const qualifiers to non-modified function parameters,
  used standard return values provided by <stdlib.h>
- distribution now includes copy of the licence
- New project maintainer: Tristan Miller <psychonaut@nothingisreal.com>


CHANGES IN VERSION 2.1 (from 2.0):

Bugfixes:
- bugfix in #defeval (can now be used to iteratively redefine a macro in
  terms of its previous definition)
- bugfix in arithmetic evaluation (operator precedence between + and -, 
  and between * and / was wrong)

Arithmetic evaluation:
- length(...) builtin in #eval
- all comparison operators revert to string comparison if arithmetic
  evaluation fails in #eval

Command-line options:
- +n does the opposite of -n (do not preserve linefeeds; place *after* -C/-P)
- -O sends output to file and stdout simultaneously
- options to control directory search order for #include
- option to adjust warning level
- option to specify an include file marker to keep track of #include 
  directives and line numbers in output

Misbehavior fixes:
- numbered argument sequences (#1...#9) are disabled outside of definitions.
- if a construct terminated by a newline is nested in last position within
  another construct, then the nested newline is optional. Concretely,
  this means that " #define myeval #eval #1 " is now valid.
- macros defined on the command line with -D... can take named arguments.