@@ -7,20 +7,20 @@
 ** Copyright (C) 2003 Tristan Miller
 ** 
 ** GPP is free software; you can redistribute it and/or modify it under the
-** terms of the GNU Library General Public License as published by the Free
-** Software Foundation; either version 2 of the License, or (at your option)
+** terms of the GNU Lesser General Public License as published by the Free
+** Software Foundation; either version 2.1 of the License, or (at your option)
 ** any later version.
 ** 
 ** GPP is distributed in the hope that it will be useful, but WITHOUT ANY
 ** WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-** FOR A PARTICULAR PURPOSE.  See the GNU Library General Public License for
+** FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
 ** more details.
 ** 
-** You should have received a copy of the GNU Library General Public License
+** You should have received a copy of the GNU Lesser General Public License
 ** along with this software; if not, write to the Free Software Foundation,
 ** Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 **
-** $Id: gpp.c,v 1.17 2003-11-22 22:21:10 psy Exp $
+** $Id: gpp.c,v 1.18 2003-11-22 23:50:58 psy Exp $
 ** 
 **
 ** To fix:
